--- a/src/partials/login/login.html
+++ b/src/partials/login/login.html
@@ -3,7 +3,7 @@
   <div class="card-container">
     <div class="card">
       <div class="login-form">
-        <div class="header">Log in</div>
+        <div class="header" id="comebacks">Login</div>
         <div class="content">
           <form id="loginForm">
             <div class="input-field">
@@ -15,18 +15,26 @@
             <div class="input-field">
               <button class="btn btn-submit" type="submit">Log in</button>
             </div>
+            <button class="login-button" data-action="login-google">
+              <img
+                class="login-button__icon"
+                src="/src/images/icons8-google.svg"
+                alt="google-icon"
+              />
+              <span class="login-button__title" data-lang="singInButton"
+                >Sign in with Google</span
+              >
+            </button>
           </form>
         </div>
         <div class="footer">
           Don't have an account ?
           <button class="btn btn-rotate" id="btn-signup">Sign up</button>
         </div>
-        
       </div>
-      
       <!-- end login-form panel -->
       <div class="signup-form">
-        <div class="header">Sign up</div>
+        <div class="header" id="comebacks">Sign up</div>
         <div class="content">
           <form id="signupForm">
             <div class="input-field">
@@ -52,8 +60,19 @@
             <div class="input-field">
               <button class="btn btn-submit" type="submit">Get started</button>
             </div>
+            <button class="login-button" data-action="login-google">
+              <img
+                class="login-button__icon"
+                src="/src/images/icons8-google.svg"
+                alt="google-icon"
+              />
+              <span class="login-button__title" data-lang="singInButton"
+                >Sign in with Google</span
+              >
+            </button>
           </form>
         </div>
+
         <div class="footer">
           <button class="btn btn-rotate" id="btn-login">
             I have an account
