--- a/src/sass/components/_trailer-modal.scss
+++ b/src/sass/components/_trailer-modal.scss
@@ -1,33 +1,31 @@
 .videoplayer-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 150;
-    padding: 0 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    transition: opacity 400ms ease-in-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 150;
+  padding: 0 10px;
+  @extend %flex-center-style;
+  background-color: black;
+  transition: opacity 400ms ease-in-out;
 }
 
 .videoplayer-container {
-    width: 300px;
+  width: 300px;
 
-    @media screen and (min-width: $tablet) {
-        width: 600px;
-        height: 300px;
-    }
+  @media screen and (min-width: $tablet) {
+    width: 600px;
+    height: 300px;
+  }
 
-    @media screen and (min-width: $desktop) {
-        width: 900px;
-        height: 450px;
-    }
+  @media screen and (min-width: $desktop) {
+    width: 900px;
+    height: 450px;
+  }
 }
 
 .videoplayer-container__iframe {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
