add-google-provider

--- a/src/partials/login/login.html
+++ b/src/partials/login/login.html
@@ -15,7 +15,7 @@
             <div class="input-field">
               <button class="btn btn-submit" type="submit">Log in</button>
             </div>
-            <button class="login-button" data-action="login-google">
+            <button class="login-button" id="googleBtn">
               <img
                 class="login-button__icon"
                 src="/src/images/icons8-google.svg"
