--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -280,6 +280,7 @@
     background-color: #ff6b08;
     border: 2px solid #ff6b08;
     box-shadow: 0 8px 43px #ff6b08;
+    color: $secondary-color;
   }
 }
 
@@ -289,6 +290,7 @@
     background-color: #ff6b08;
     border: 2px solid #ff6b08;
     box-shadow: 0 8px 43px #ff6b08;
+    color: $secondary-color;
   }
 }
 
@@ -296,6 +298,7 @@
   background-color: #ff6b08;
   border: 2px solid #ff6b08;
   box-shadow: 0 8px 43px #ff6b08;
+  color: $secondary-color;
 }
 
 .buttonYouTubeTrailer {
