correct theme switcher bgcolor

--- a/src/sass/components/_change-theme.scss
+++ b/src/sass/components/_change-theme.scss
@@ -41,19 +41,19 @@ body.dark-theme {
     transition: 0.5s;
   }
 
-  & .modal-movie-info{
+  & .modal-movie-info {
     color: $primary-color;
   }
 
-  & .modal-movie-title{
+  & .modal-movie-title {
     color: $primary-color;
   }
 
-  & .modal-movie-descript{
+  & .modal-movie-descript {
     color: $primary-color;
   }
 
-  & .main-wrapper{
+  & .main-wrapper {
     background-color: $primary-color;
   }
 }
@@ -65,18 +65,18 @@ body.dark-theme {
   bottom: 25px;
   right: 0;
   position: absolute;
-  
-    @media screen and (min-width: $mobile) {
-      padding-right:20px;
-    }
-  
-    @media screen and (min-width: $tablet) {
-      padding-right:32px;
-    }
-  
-    @media screen and (min-width: $desktop) {
-      padding-right: 71px;
-    }
+
+  @media screen and (min-width: $mobile) {
+    padding-right: 20px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    padding-right: 32px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-right: 71px;
+  }
 }
 
 .toolbar--login {
@@ -85,18 +85,18 @@ body.dark-theme {
   top: 175px;
   right: 15;
   position: absolute;
-  
-    @media screen and (min-width: $mobile) {
-      padding-right:20px;
-    }
-  
-    @media screen and (min-width: $tablet) {
-      padding-right:32px;
-    }
-  
-    @media screen and (min-width: $desktop) {
-      padding-right: 71px;
-    }
+
+  @media screen and (min-width: $mobile) {
+    padding-right: 20px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    padding-right: 32px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding-right: 71px;
+  }
 }
 
 .theme-switch {
@@ -115,7 +115,7 @@ body.dark-theme {
 }
 
 .toolbar__background {
-  background-color: $primary-color;
+  background-color: transparent;
   display: flex;
   align-items: center;
   flex-shrink: 0;
