--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -16,13 +16,10 @@
         <li class="page">
           <a href="/src/library.html" class="page-link">my library</a>
         </li>
-        <li class="page">
+        <li class="page authorization">
           <a href="/src/login.htm" class="page-link" id="authorization"
             >Login</a
           >
-        </li>
-        <li class="page">
-          <a href="#" class="page-link" id="signOut">Sign Out</a>
         </li>
       </ul>
     </nav>
