--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -57,13 +57,10 @@ nav {
   display: flex;
 }
 
-.page {
-  &:last-child {
-    margin-right: 0;
-  }
-  margin-right: 40px;
-  @media screen and (max-width: ($tablet - 1)) {
-    margin-right: 15px;
+.page:not(:last-child) {
+  margin-right: 15px;
+  @media screen and (min-width: $tablet) {
+    margin-right: 40px;
   }
 }
 
