--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -37,7 +37,7 @@
 
 .modal-movie-wrapper {
   position: absolute;
-  z-index: 200;                                                        
+  z-index: 200;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -49,7 +49,7 @@
   background-color: $secondary-color;
   @media screen and (max-width: 767px) {
     max-width: 280px;
-    overflow:auto;
+    overflow: auto;
     height: 100%;
   }
   @media screen and (min-width: $tablet) {
@@ -84,8 +84,8 @@
 
 .modal-movie-information {
   background-color: $secondary-color;
-@media screen and (max-width: 767px) {
-   padding-bottom: 20px;
+  @media screen and (max-width: 767px) {
+    padding-bottom: 20px;
   }
   @media screen and (min-width: $tablet) {
     margin-left: 32px;
@@ -140,7 +140,7 @@
   width: 69px;
   margin-right: 30px;
   color: #8c8c8c;
-  font-style: normal;  
+  font-style: normal;
   @include font(500, 12px, 1.33);
 }
 
@@ -153,7 +153,7 @@
   margin-top: 0;
   font-family: $primary-font;
   font-style: normal;
-  color: $primary-color;  
+  color: $primary-color;
   @include font(500, 12px, 1.16);
 }
 
@@ -167,16 +167,17 @@
     margin-bottom: 8px;
   }
 }
+
 .modal-movie-description-title {
   text-transform: uppercase;
   color: $primary-color;
   font-family: $primary-font;
-  font-style: normal;  
+  font-style: normal;
   @include font(500, 12px, 1.33);
   @media screen and (max-width: 767px) {
     margin-bottom: 6px;
-
   }
+}
 
 .modal-movie-description-vote {
   display: inline-block;
@@ -190,13 +191,13 @@
 }
 .modal-movie-description-votes {
   font-family: $primary-font;
-  font-style: normal;  
+  font-style: normal;
   @include font(500, 12px, 1.16);
   color: $primary-color;
 }
-  
+
 .modal-movie-genre-name {
-  font-family: $primary-font;  
+  font-family: $primary-font;
   @include font(500, 12px, 1.33);
   color: $primary-color;
 }
@@ -213,7 +214,7 @@
 }
 
 .modal-movie-descript {
-  font-family: $primary-font;  
+  font-family: $primary-font;
   @include font(500, 12px, 1.67);
   color: $primary-color;
   margin-right: 0;
@@ -224,7 +225,7 @@
   @media screen and (min-width: $desktop) {
   }
 }
-  
+
 .modal-movie-button-wrapper {
   display: flex;
   @media screen and (max-width: 767px) {
@@ -240,7 +241,7 @@
 }
 
 .modal-movie-button {
-  cursor: pointer;  
+  cursor: pointer;
   @include font(500, 12px, 1.33);
   width: 136px;
   height: 44px;
@@ -348,10 +349,9 @@
   }
 }
 
-.bgButtom{
-   background-image: url('/src/images/modal-movie/YouTube-Icon.svg');
-   background-repeat: no-repeat;
-   background-position: 50%;
-   flex-direction: column;
+.bgButtom {
+  background-image: url('/src/images/modal-movie/YouTube-Icon.svg');
+  background-repeat: no-repeat;
+  background-position: 50%;
+  flex-direction: column;
 }
-
