--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -21,6 +21,9 @@
             >Login</a
           >
         </li>
+        <li class="page">
+          <a href="#" class="page-link" id="signOut">Sign Out</a>
+        </li>
       </ul>
     </nav>
     <form class="search-form" id="search-form">
