--- a/src/partials/login/login.html
+++ b/src/partials/login/login.html
@@ -32,7 +32,6 @@
           <button class="btn btn-rotate" id="btn-signup">Sign up</button>
         </div>
       </div>
-      <!-- end login-form panel -->
       <div class="signup-form">
         <div class="header" id="comebacks">Sign up</div>
         <div class="content">
@@ -60,15 +59,13 @@
             <div class="input-field">
               <button class="btn btn-submit" type="submit">Get started</button>
             </div>
-            <button class="login-button" data-action="login-google">
+            <button class="login-button">
               <img
                 class="login-button__icon"
                 src="/src/images/icons8-google.svg"
                 alt="google-icon"
               />
-              <span class="login-button__title" data-lang="singInButton"
-                >Sign in with Google</span
-              >
+              <span class="login-button__title">Sign in with Google</span>
             </button>
           </form>
         </div>
@@ -79,10 +76,6 @@
           </button>
         </div>
       </div>
-      <!-- end signup-form panel -->
     </div>
-    <!-- end card -->
   </div>
-  <!-- end card-container -->
-  <!-- <include src="./partials/utils/switch-theme.html"></include> -->
 </div>
