--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -8,6 +8,7 @@ $primary-color: #000000;
 $secondary-color: #ffffff;
 $secondary-color-shade-light: #f7f7f7;
 $secondary-color-shade-dark: #545454;
+$accent-color-grey: rgb(141, 141, 141);
 $accent-color: #ff6b08;
 $warning-color: #ff001b;
 
