--- a/src/partials/utils/footer.html
+++ b/src/partials/utils/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="footer_container">
+  <div class="footer__container">
     <p class="footer__text">&#169; 2022 | All Rights Reserved |</p>
     <p class="footer__info">
       Developed with
