--- a/src/sass/layouts/footer/_footer.scss
+++ b/src/sass/layouts/footer/_footer.scss
@@ -10,7 +10,7 @@ position: relative;
     position: absolute;
     bottom: 0;  
 }
-.footer_container {
+.footer__container {
     padding: 30px 0;
     color: $secondary-color-shade-dark;
     transition: 0.5s;
