--- a/src/sass/components/_login.scss
+++ b/src/sass/components/_login.scss
@@ -32,7 +32,7 @@
   top: 0;
   left: 0;
   background-color: $secondary-color;
-  box-shadow: 0px 8px 15px 0px $accent-color;
+  box-shadow: 0px 8px 15px 0px $accent-color-grey;
   display: flex;
   flex-direction: column;
 }
@@ -77,7 +77,7 @@
   color: $secondary-color-shade-dark;
   text-transform: uppercase;
   font-weight: bold;
-  box-shadow: 0px 8px 10px 0px $accent-color;
+  box-shadow: 0px 8px 10px 0px $accent-color-grey;
 }
 .card .content {
   @extend %flex-center-style;
@@ -132,14 +132,14 @@
   text-transform: uppercase;
   color: $secondary-color;
   font-weight: bold;
-  background-color: $accent-color;
-  box-shadow: 0px 8px 10px 0px $accent-color;
+  background-color: $accent-color-grey;
+  box-shadow: 0px 8px 10px 0px $accent-color-grey;
 }
 
 .btn-submit:hover {
   color: $secondary-color;
-  background-color: $accent-color;
-  box-shadow: 0px 8px 10px 0px $accent-color;
+  background-color: $accent-color-grey;
+  box-shadow: 0px 8px 10px 0px $accent-color-grey;
 }
 
 .btn-submit:focus {
@@ -167,7 +167,7 @@ form {
   border: none;
   outline: none;
   border-radius: 30px;
-  background-color: $accent-color;
+  background-color: $accent-color-grey;
   color: $secondary-color;
   transition: 0.4s;
 }
@@ -189,8 +189,8 @@ form {
 }
 
 .input-field input:focus {
-  box-shadow: 0px 8px 15px 0px $accent-color;
-  box-shadow: 0px 8px 15px 0px $accent-color;
+  box-shadow: 0px 8px 15px 0px $accent-color-grey;
+  box-shadow: 0px 8px 15px 0px $accent-color-grey;
 }
 
 .see-password {
@@ -211,7 +211,7 @@ form {
   padding: 0 15px;
   border-radius: 20px;
   margin: 0 auto;
-  background-color: $accent-color;
+  background-color: $accent-color-grey;
   outline: none;
   border: none;
 
@@ -229,6 +229,6 @@ form {
     color: $secondary-color;
   }
   &:focus {
-    box-shadow: 0px 8px 15px 0px $accent-color;
+    box-shadow: 0px 8px 15px 0px $accent-color-grey;
   }
 }
