--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -13,15 +13,17 @@
             >home</a
           >
         </li>
-        <li class="page">
-          <a href="/src/library.html" class="page-link">my library</a>
+        <li class="page is-hidden">
+          <a href="/src/library.html" class="page-link" id="libraryLink"
+            >my library</a
+          >
         </li>
-        <li class="page authorization">
+        <li class="page">
           <a href="/src/login.htm" class="page-link" id="authorization"
             >Login</a
           >
         </li>
-        <li class="page">
+        <li class="page is-hidden">
           <a href="#" class="page-link" id="signOut">Sign Out</a>
         </li>
       </ul>
