--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -290,20 +290,18 @@
   background-color: $secondary-color;
   //&:focus,
   &:hover {
-    background-color: #ff6b08;
-    border: 2px solid #ff6b08;
-    box-shadow: 0 8px 43px #ff6b08;
-    color: $secondary-color;
+    background-color: #f7f7f7;
+    border-color: #545454;
+    box-shadow: 0 4px 4px #00000040;
   }
 }
 
 .modal-queue-button {
   //&:focus,
   &:hover {
-    background-color: #ff6b08;
-    border: 2px solid #ff6b08;
-    box-shadow: 0 8px 43px #ff6b08;
-    color: $secondary-color;
+    background-color: #f7f7f7;
+    border-color: #545454;
+    box-shadow: 0 4px 4px #00000040;
   }
 }
 
@@ -312,6 +310,12 @@
   border: 2px solid #ff6b08;
   box-shadow: 0 8px 43px #ff6b08;
   color: $secondary-color;
+  &:hover {
+    background-color: #ff6b08;
+    border: 2px solid #ff6b08;
+    box-shadow: 0 8px 43px #ff6b08;
+    color: $secondary-color;
+  }
 }
 
 .buttonYouTubeTrailer {
