--- a/src/partials/utils/footer-modal.html
+++ b/src/partials/utils/footer-modal.html
@@ -176,7 +176,7 @@
                                 </a>
                             </li>
                             <li class="slides-social__item">
-                                <a href="" class="slides-social__link">
+                                <a href="https://www.linkedin.com/mwlite/in/volodymyr-oliinyk-999000230" class="slides-social__link">
                                     <svg class="slides-social__icon">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
