--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -138,13 +138,13 @@
   font-family: $primary-font;
   width: 69px;
   margin-right: 30px;
-  color: #8c8c8c;
+  color: $primary-color;
   font-style: normal;
   @include font(500, 12px, 1.33);
 }
 
 .modal-movie-data-slash {
-  color: #8c8c8c;
+  color: $primary-color;
 }
 
 .modal-movie-description {
@@ -306,14 +306,14 @@
 }
 
 .active {
-  background-color: #ff6b08;
-  border: 2px solid #ff6b08;
-  box-shadow: 0 8px 43px #ff6b08;
+  background-color: $accent-color;
+  border: 2px solid $accent-color;
+  box-shadow: 0 8px 43px $accent-color;
   color: $secondary-color;
   &:hover {
-    background-color: #ff6b08;
-    border: 2px solid #ff6b08;
-    box-shadow: 0 8px 43px #ff6b08;
+    background-color: $accent-color;
+    border: 2px solid $accent-color;
+    box-shadow: 0 8px 43px $accent-color;
     color: $secondary-color;
   }
 }
