--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -325,13 +325,13 @@
   width: 48px;
   height: 36px;
   border-radius: 10px;
-  border: solid 1px #f61c0d;
+  border: solid 1px $youtube-color;
   cursor: pointer;
   justify-content: center;
   align-items: center;
   @extend %flex-center-style;
   &:hover {
-    border: solid 1px #ff1100b7;
+    border: solid 1px $youtube-color-hover;
   }
   @media screen and (max-width: 767px) {
     top: 20px;
