--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -14,6 +14,8 @@ $accent-color: #ff6b08;
 $warning-color: #ff001b;
 $youtube-color: #f61c0d;
 $youtube-color-hover: #ff1100b7;
+$loader-box-background: #fee8d8;
+$loader-box-element-background: #dcdcdc;
 
 $transition-duration: 250ms;
 $transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
