--- a/src/sass/components/_trailer-modal.scss
+++ b/src/sass/components/_trailer-modal.scss
@@ -7,7 +7,7 @@
   z-index: 150;
   padding: 0 10px;
   @extend %flex-center-style;
-  background-color: black;
+  background-color: $primary-color;
   transition: opacity 400ms ease-in-out;
 }
 
