--- a/src/sass/layouts/footer/_footer-modal.scss
+++ b/src/sass/layouts/footer/_footer-modal.scss
@@ -1,105 +1,104 @@
-
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 20;
-    padding: 0 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba($secondary-color-shade-dark, 0.9);
-    transition: opacity 400ms ease-in-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+  padding: 0 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba($secondary-color-shade-dark, 0.9);
+  transition: opacity 400ms ease-in-out;
 }
 
 .is-hidden {
-    opacity: 0;
-    pointer-events: none;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .swiper-modal {
-    width: 280px;
-    height: 280px;
-    @media screen and (min-width: $tablet) {
-        width: 560px;
-    }
+  width: 280px;
+  height: 280px;
+  @media screen and (min-width: $tablet) {
+    width: 560px;
+  }
 }
 
 .swiper {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .swiper-slide {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .swiper-pagination-bullet {
-    background: $accent-color;
+  background: $accent-color;
 }
 
 .swiper-slider__img {
-    display: block;
-    margin-bottom: 10px;
-    width: 180px;
-    height: 180px;
-    object-fit: cover;
-    border-radius: 8px;
+  display: block;
+  margin-bottom: 10px;
+  width: 180px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 8px;
 }
 
 .swiper-slider__name {
-    margin-bottom: 10px;
-    @include font(400, 14px, 1.17);
-    text-align: center;
-    color: $secondary-color;
+  margin-bottom: 10px;
+  @include font(400, 14px, 1.17);
+  text-align: center;
+  color: $secondary-color;
 }
 
 .slides-social {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
 
-    .slides-social__item:not(:last-child) {
-        margin-right: 15px;
+  .slides-social__item:not(:last-child) {
+    margin-right: 15px;
+  }
+
+  .slides__link {
+    display: block;
+  }
+
+  .slides-social__icon {
+    width: 20px;
+    height: 20px;
+    fill: $secondary-color;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+      fill: $accent-color;
     }
-
-    .slides__link {
-        display: block;
-    }
-
-    .slides-social__icon {
-        width: 20px;
-        height: 20px;
-        fill: $secondary-color;
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        &:hover {
-            fill: $accent-color;
-        }
-    }
+  }
 }
 
 .swiper-pagination {
-    .swiper-pagination-bullet-active {
-            background-color: white;
-            color: white;
-            background: white;
-        }
+  .swiper-pagination-bullet-active {
+    background-color: $secondary-color;
+    color: $secondary-color;
+    background: $secondary-color;
+  }
 }
 
 .swiper {
-    .swiper-button-next,
-    .swiper-button-prev {
-        margin-top: -50px;
-    }
+  .swiper-button-next,
+  .swiper-button-prev {
+    margin-top: -50px;
+  }
 }
 
 .swiper-button-prev::after,
 .swiper-button-next::after {
-    color: $secondary-color;
+  color: $secondary-color;
 }
