--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -14,7 +14,7 @@
           >
         </li>
         <li class="page">
-          <a href="/src/library.html" class="page-link">my library</a>
+          <a href="/src/library.html" class="page-link js-library">my library</a>
         </li>
         <li class="page authorization">
           <a href="/src/login.htm" class="page-link" id="authorization"
