--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -13,7 +13,7 @@
             >home</a
           >
         </li>
-        <li class="page is-hidden">
+        <li class="page">
           <a href="/src/library.html" class="page-link" id="libraryLink"
             >my library</a
           >
